/ticket spec and tests
